--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1 class="title">토이 프로젝트</h1>
-    <p>commit test</p>
-    <p>clone test</p>
+
+    
+    <header class="title">
+        <h1 class="title">TIME</h1>
+    </header>
     
 </body>
 </html>
