--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <p>test</p>
+    <p class="title">test</p>
     
     <h1>안녕하세요</h1>
     <h2>안녕하세요</h2>
