--- a/index.html
+++ b/index.html
@@ -5,10 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toy project</title>
     <link rel="stylesheet" href="./style.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
+    <div class="top_box">
 
+    </div>
+    <div class="bottom_box">
+        <div class="line"></div>
+        <div class="short_list">
+            <h1 class="short_list_tit title_all">
+                Short List
+            </h1>
+            <div class="short_list_img1">
+                <img src="./public/images/short_img1.png" alt="">
+                <div class="short_text1 short_txt">
+                    <p>Malala Yousafzal</p>
+                </div>
+            </div>
+            <div class="short_list_img2">
+                <img src="./public/images/short_img2.png" alt="">
+                <div class="short_text2 short_txt">
+                    <p>Tim Cook</p>
+                </div>
+            </div>
+            <div class="short_list_img3">
+                <img src="./public/images/short_img3.png" alt="">
+                <div class="short_text3 short_txt">
+                    <p>Mohamed MorsI</p>
+                </div>
+            </div>
+            <div class="short_list_img4">
+                <img src="./public/images/short_img4.png" alt="">
+                <div class="short_text4 short_txt">
+                    <p>Fablola Gianotti</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="line"></div>
+        <div class="Person_Issue">
+            <h1 class="Person_Issue_txt title_all">
+                Person of Year Issue
+            </h1>
+            <div class="Person_Issue_img">
+                <div class="Person_Issue_img_box">
+                    <img src="./public/images/Person_Issue_img1.png" alt="">
+                </div>
+                <div class="Person_Issue_text">
+                    <ul class="Issue_text_list">
+                        <li>Runner-Up: Malala Yousafzai</li>
+                        <li>Runner-Up: Tim Cook</li>
+                        <li>Runner-Up: Katy Steinmetz</li>
+                        <li>Runner-Up: Malala Yousafzai</li>
+                        <li class="hidden_txt">
+                            Person of the year : Barack Obama 
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
