--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>toy project</title>
+
+    <!-- 폰트어썸 cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/all.min.js"></script>
+
+    <!-- 구글폰트 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+
+    <!-- css 연결 -->
     <link rel="stylesheet" href="./style.css">
+    <title>toy project</title>
 </head>
 <body>
+
+    <header class="header">
+        <h1 class="title">TIME</h1>
+
+        <nav class="navbar_burger">
+            <i class="fas fa-bars"></i>
+        </nav>
+
+    </header>
+
+    <section class="search_box">
+        검색
+
+    </section>
+
+
+
 
 
 </body>
