--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <!-- 구글폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
 
     <!-- css 연결 -->
     <link rel="stylesheet" href="./style.css">
@@ -36,7 +36,7 @@
 
 
     <section class="bottom_box">
-        <div class="line"></div>
+        <div class="line first_line"></div>
         <div class="short_list">
             <h1 class="short_list_tit title_all">
                 Short List
@@ -83,11 +83,27 @@
                         <li>Runner-Up: Katy Steinmetz</li>
                         <li>Runner-Up: Malala Yousafzai</li>
                         <li class="hidden_txt">
-                            Person of the year : Barack Obama 
+                            Person of the year : Barack Obama
                         </li>
                     </ul>
                 </div>
             </div>
+        </div>
+
+        <div class="line"></div>
+        <div class="Person_Year">
+            <div class="Person_Year_img">
+                <img src="./public/images/person_year_img1.png" alt="">
+            </div>
+            <h3 class="Person_Year_txt title_all">
+                PERSON OF THE YEAR : REACTIONS
+            </h3>
+        </div>
+
+        <div class="line"></div>
+        <div class="user_aera1">
+        </div>
+        <div class="user_aera2">
         </div>
     </section>
 </body>
