--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
                 Person of Year Issue
             </h1>
             <div class="Person_Issue_img">
-                <div class="Person_Issue_img_box">
+                <a href="#!" class="Person_Issue_img_box">
                     <img src="./public/images/Person_Issue_img1.png" alt="">
-                </div>
+                </a>
                 <div class="Person_Issue_text">
                     <ul class="Issue_text_list">
-                        <li>Runner-Up: Malala Yousafzai</li>
-                        <li>Runner-Up: Tim Cook</li>
-                        <li>Runner-Up: Katy Steinmetz</li>
-                        <li>Runner-Up: Malala Yousafzai</li>
+                        <li><a href="#!">Runner-Up: Malala Yousafzai</a></li>
+                        <li><a href="#!">Runner-Up: Tim Cook</a></li>
+                        <li><a href="#!">Runner-Up: Katy Steinmetz</a></li>
+                        <li><a href="#!">Runner-Up: Malala Yousafzai</a></li>
                         <li class="hidden_txt">
                             Person of the year : Barack Obama
                         </li>
@@ -101,16 +101,45 @@
 
         <div class="line"></div>
         <div class="Person_Year">
-            <div class="Person_Year_img">
+            <a href="#!" class="Person_Year_img">
                 <img src="./public/images/person_year_img1.png" alt="">
-            </div>
-            <h3 class="Person_Year_txt title_all">
-                PERSON OF THE YEAR : REACTIONS
-            </h3>
+            </a>
+            <a href="#!" class="Person_Year_txt title_all">
+                <h3>PERSON OF THE YEAR : REACTIONS</h3>
+            </a>
         </div>
 
         <div class="line"></div>
         <div class="user_aera1">
+            <div class="user_aera_top">
+                <div class="user_aera_img"></div>
+                <div class="user_name">Mohamed Zeeshun</div>
+                <div class="user_ID">@Zet Tweeth</div>
+            </div>
+            <a href="#!" class="user_txt">
+                Thought she deserved a win. RT “@TIME:</br>
+                Perseon of the Year runner-up : #Malala</br>
+                the fighter | #POY ”</br>
+            </a>
+            <div class="user_aera_btm">
+                <div class="user_aera_btm_Box1">
+                    <a href="#!" class="btm_twiter_img">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <div class="btm_time">12 minutes Ago</div>
+                </div>
+                <div class="user_aera_btm_Box2">
+                    <a href="#!" class="btm_share">
+                        <i class="fas fa-share"></i>
+                    </a>
+                    <a href="#!" class="btm_refresh">
+                        <i class="fas fa-sync-alt"></i>
+                    </a>
+                    <a href="#!" class="btm_like">
+                        <i class="far fa-star"></i>
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="user_aera2">
         </div>
