--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 
 
-
-
-
     <!-- 구글폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
 
+
     <!-- css 연결 -->
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <title>TIME | NEWS</title>
+
 </head>
+
+
+
+
 <body>
+
 
     <header class="header">
         <h1 class="title">TIME</h1>
@@ -35,10 +41,43 @@
 
     </header>
 
+
     <section class="search_box">
         <i class="xi-search"></i>
         <p class="sarch_title">Search TIME</p>
         <div class="search_btn">Go</div>
+    </section>
+
+    <main class="main_box">
+        <div></div>
+        <img src="./public/images/main.png" alt="main_img">
+
+
+    </main>
+
+    <article class="article_box">
+        <h1>Person of the Year: Barack Obama, Architect of the New America</h1>
+        <p>The American people have rightly been frustrated at the pace of change, and the economy is still struggling, and this President we elected is imperfect. ‘Obama says.’  ‘And yet despite all that, this is who we want to be.’ <p class="italic">By Michael Scherer</p></p>
+    </article>
+
+    <section class="article_list">
+        <ul>
+            <li>Exclusive: The Person of the Tear Interview</li>
+            <li><i class="fab fa-youtube"></i>Inside the White House: Never · Before · Seen Photos</li>
+            <li>Re-Election. The Data Miners Who Helped Obama Win</li>
+            <li><i class="fab fa-youtube"></i>Obama Photo Diary: 48 Hours with the President</li>
+            <li>RunnerUp: Malalala’s Journey ― A Timeline</li>
+            <li>RunnerUp: Time Cook’s Greatest Apple Moments</li>
+            <li>RunnerUp: TIME Sits Down with Morsi</li>
+            <li>RunnerUp: What is the ‘God Particle’?</li>
+            <li>2012 In Brief. The People Who Mattered Most</li>
+            <li>THose We Lost: TIME’s 2012 Tributes</li>
+            <li>Fareed Zakaria: Why Obama’s A lot Like lke</li>
+            <li>Joe Klein: The 2012 Awards for Political Courage </li>
+            <li>Joel Stein: 2012’s Coolest Person Is...</li>
+            <li>Live Reactions: What You’re Saying About #POY2012</li>
+            <li>Gallery: Men Who Were Person of the Year Twice</li>
+        </ul>
     </section>
 
 
