--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>TIME | NEWS</title>
+    <title>TIME | Current & Breaking News | National & World Updates</title>
 
 </head>
-
-
 
 
 <body>
@@ -48,22 +46,45 @@
         <div class="search_btn">Go</div>
     </section>
 
+<!--     <main class="main_box">
+
+        <div class="main_text">
+            <span class="main_inner">
+                <p class="sub_title">PERSON OF THE YEAR</p>
+                <p class="main_title">BARACK OBAMA</p>
+            </span>
+        </div>
+
+        <div class="main_img">
+            <img src="./public/images/main.png" alt="main_img">
+        </div>
+
+    </main> -->
+
+
+
+
     <main class="main_box">
-        <div></div>
-        <img src="./public/images/main.png" alt="main_img">
+        <div class="main">
+            summary
+            <div class="main_inner">title</div>
+            
+        </div>
+        <div class="main_img">
 
-
+        </div>
     </main>
+
 
     <article class="article_box">
         <h1>Person of the Year: Barack Obama, Architect of the New America</h1>
         <p>The American people have rightly been frustrated at the pace of change, and the economy is still struggling, and this President we elected is imperfect. ‘Obama says.’  ‘And yet despite all that, this is who we want to be.’ <p class="italic">By Michael Scherer</p></p>
     </article>
 
-    <section class="article_list">
+    <article class="article_list">
         <ul>
             <li>Exclusive: The Person of the Tear Interview</li>
-            <li><i class="fab fa-youtube"></i>Inside the White House: Never · Before · Seen Photos</li>
+            <li><i class="fab fa-youtube"></i>Inside the White House : Never · Before · Seen Photos</li>
             <li>Re-Election. The Data Miners Who Helped Obama Win</li>
             <li><i class="fab fa-youtube"></i>Obama Photo Diary: 48 Hours with the President</li>
             <li>RunnerUp: Malalala’s Journey ― A Timeline</li>
@@ -78,10 +99,7 @@
             <li>Live Reactions: What You’re Saying About #POY2012</li>
             <li>Gallery: Men Who Were Person of the Year Twice</li>
         </ul>
-    </section>
-
-
-
+    </article>
 
     <section class="bottom_box">
         <div class="line first_line"></div>
