--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
         <nav class="navbar_burger">
             <i class="xi-bars"></i>
-
         </nav>
 
     </header>
@@ -42,38 +41,34 @@
 
     <section class="search_box">
         <i class="xi-search"></i>
-        <p class="sarch_title">Search TIME</p>
-        <div class="search_btn">Go</div>
+        <p class="search_title">Search TIME</p>
+        <button class="search_btn">Go</button>
     </section>
-
-<!--     <main class="main_box">
-
-        <div class="main_text">
-            <span class="main_inner">
-                <p class="sub_title">PERSON OF THE YEAR</p>
-                <p class="main_title">BARACK OBAMA</p>
-            </span>
-        </div>
-
-        <div class="main_img">
-            <img src="./public/images/main.png" alt="main_img">
-        </div>
-
-    </main> -->
 
 
 
 
     <main class="main_box">
-        <div class="main">
-            summary
-            <div class="main_inner">title</div>
-            
-        </div>
-        <div class="main_img">
 
-        </div>
+        <section class="main">
+            <div class="main_inner">
+                <p class="inner_text">PERSON OF THE YEAR</p>
+                <p class="inner_title">BARACK <br> OMAMA</p>
+            </div>
+        </section>
+
+
+        <section class="main_img_box">
+            <div class="main_img">
+                <img src="./public/images/main.png" alt="main_img">
+            </div>
+        </section>
+
     </main>
+
+
+
+
 
 
     <article class="article_box">
