--- a/index.html
+++ b/index.html
@@ -384,29 +384,55 @@
                 <li><a href="#!">Coupons</a></li>
             </ul>
             <ul class="footer_list_box3 footer_list_box">
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
+                <li><a href="#!">TIME Edge</a></li>
+                <li><a href="#!">Video</a></li>
+                <li><a href="#!">Masthead</a></li>
+                <li><a href="#!">Newsletters</a></li>
+                <li><a href="#!">Subscribe</a></li>
+                <li><a href="#!">Subscriber Benefits</a></li>
+                <li><a href="#!">Give a Gift</a></li>
+                <li><a href="#!">Shop the TIME Store</a></li>
+                <li><a href="#!">Careers</a></li>
+                <li><a href="#!">Modern Slavery Statement</a></li>
             </ul>
             <ul class="footer_list_box4 footer_list_box">
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
-                <li><a href="#!"></a></li>
+                <li><a href="#!">Press Room</a></li>
+                <li><a href="#!">TIME Studios</a></li>
+                <li><a href="#!">U.S. & Canada Customer Care</a></li>
+                <li><a href="#!">Global Help Center</a></li>
+                <li><a href="#!">Contact the Editors</a></li>
+                <li><a href="#!">Reprints and Permissions</a></li>
+                <li><a href="#!">Site Map</a></li>
+                <li><a href="#!">Media Kit</a></li>
+                <li><a href="#!">Supplied Partner Content</a></li>
+                <li><a href="#!">About</a></li>
             </ul>
+        </div>
+
+        <div class="line"></div>
+        <div class="foot_bottom">
+            <div class="foot_bottom_txt1 foot_bottom_txt">
+                <span>
+                    ⓒ 2023 TIME USA, LLC. All Rights Reserved. Use of this site constitutes acceptance of our
+                </span>
+                <span>
+                    <span>
+                        Terms of Service, Privacy Policy (Your California Privacy Rights)
+                    </span>
+                    <span>and</span>
+                    <span>
+                        Do Not Sell or Share My Personal Information.
+                    </span>
+                </span>
+            </div>
+            <div class="foot_bottom_txt2 foot_bottom_txt">
+                <span>
+                    TIME may receive compensation for some links to products and services on this website.
+                </span>
+                <span>
+                    Offers may be subject to change without notice.
+                </span>
+            </div>
         </div>
     </footer>
 </body>
