--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
 
     <!-- css 연결 -->
@@ -74,26 +77,60 @@
 
     <article class="article_box">
         <h1>Person of the Year: Barack Obama, Architect of the New America</h1>
-        <p>The American people have rightly been frustrated at the pace of change, and the economy is still struggling, and this President we elected is imperfect. ‘Obama says.’  ‘And yet despite all that, this is who we want to be.’ <p class="italic">By Michael Scherer</p></p>
+        <p>The American people have rightly been frustrated at the pace of change, and the economy is still struggling,
+            and this President we elected is imperfect. ‘Obama says.’ ‘And yet despite all that, this is who we want to
+            be.’ <p class="italic">By Michael Scherer</p>
+        </p>
     </article>
 
     <article class="article_list">
         <ul>
-            <li>Exclusive: The Person of the Tear Interview</li>
-            <li><i class="fab fa-youtube"></i>Inside the White House : Never · Before · Seen Photos</li>
-            <li>Re-Election. The Data Miners Who Helped Obama Win</li>
-            <li><i class="fab fa-youtube"></i>Obama Photo Diary: 48 Hours with the President</li>
-            <li>RunnerUp: Malalala’s Journey ― A Timeline</li>
-            <li>RunnerUp: Time Cook’s Greatest Apple Moments</li>
-            <li>RunnerUp: TIME Sits Down with Morsi</li>
-            <li>RunnerUp: What is the ‘God Particle’?</li>
-            <li>2012 In Brief. The People Who Mattered Most</li>
-            <li>THose We Lost: TIME’s 2012 Tributes</li>
-            <li>Fareed Zakaria: Why Obama’s A lot Like lke</li>
-            <li>Joe Klein: The 2012 Awards for Political Courage </li>
-            <li>Joel Stein: 2012’s Coolest Person Is...</li>
-            <li>Live Reactions: What You’re Saying About #POY2012</li>
-            <li>Gallery: Men Who Were Person of the Year Twice</li>
+            <li>
+                <i class="fas fa-circle"></i>
+                Exclusive: The Person of the Tear Interview
+            </li>
+            <li>
+                <i class="fab fa-youtube"></i>Inside the White House : Never · Before · Seen Photos
+            </li>
+            <li>
+                <i class="fas fa-circle"></i>Re-Election. The Data Miners Who Helped Obama Win
+            </li>
+            <li>
+                <i class="fab fa-youtube"></i>Obama Photo Diary: 48 Hours with the President
+            </li>
+            <li>
+                <i class="fas fa-circle"></i>RunnerUp: Malalala’s Journey ― A Timeline
+            </li>
+            <li>
+                <i class="fas fa-circle"></i>RunnerUp: Time Cook’s Greatest Apple Moments
+            </li>
+            <li>
+                <i class="fas fa-circle"></i>RunnerUp: TIME Sits Down with Morsi
+            </li>
+            <li>
+                <i class="fas fa-play-circle"></i> RunnerUp: What is the ‘God Particle’?
+            </li>
+            <li>
+                <i class="fas fa-circle"></i> 2012 In Brief. The People Who Mattered Most
+            </li>
+            <li>
+                <i class="fas fa-circle"></i> THose We Lost: TIME’s 2012 Tributes
+            </li>
+            <li>
+                <i class="fas fa-circle"></i> Fareed Zakaria: Why Obama’s A lot Like lke
+            </li>
+            <li>
+                <i class="fas fa-circle"></i> Joe Klein: The 2012 Awards for Political Courage
+            </li>
+            <li>
+                <i class="fas fa-circle"></i> Joel Stein: 2012’s Coolest Person Is...
+            </li>
+            <li>
+                <i class="fas fa-circle"></i> Live Reactions: What You’re Saying About #POY2012
+            </li>
+            <li>
+                <i class="fas fa-circle"></i> Gallery: Men Who Were Person of the Year Twice
+            </li>
         </ul>
     </article>
 
@@ -251,49 +288,61 @@
             </div>
             <div class="Reactions_Tap_list_box">
                 <ul class="Reactions_Tap_list1 Tap_list">
-                    <li><a href="#!">   <!-- 1 -->
-                        <p>1</p>
-                        <p>Breaking Down the Ending of Netflix’s New Swedish Thriller A Nearly Normal Family</p>
-                    </a></li>
-                    <li><a href="#!">   <!-- 2 -->
-                        <p>2</p>
-                        <p>Philippines’ Marcos Opposes International Criminal Court Probe Into Duterte’s Drug War</p>
-                    </a></li>
-                    <li><a href="#!">   <!-- 3 -->
-                        <p>3</p>
-                        <p>Could China’s Child Pneumonia Outbreak Spread? All You Need to Know</p>
-                    </a></li>
-                    <li><a href="#!">   <!-- 4 -->
-                        <p>4</p>
-                        <p>U.S. Virgin Islands Is in a State of Emergency Over Lead in Water. Here's What to Know</p>
-                    </a></li>
-                    <li><a href="#!">   <!-- 5 -->
-                        <p>5</p>
-                        <p>Rosalynn Carter Hired a Wrongfully Convicted Murderer to Serve as White</p>
-                    </a></li>
-                    <li><a href="#!">   <!-- 6 -->
-                        <p>6</p>
-                        <p>Weight Loss Drug Wegovy Can Also Reduce Risk of Heart Events</p>
-                    </a></li>
+                    <li><a href="#!">
+                            <!-- 1 -->
+                            <p>1</p>
+                            <p>Breaking Down the Ending of Netflix’s New Swedish Thriller A Nearly Normal Family</p>
+                        </a></li>
+                    <li><a href="#!">
+                            <!-- 2 -->
+                            <p>2</p>
+                            <p>Philippines’ Marcos Opposes International Criminal Court Probe Into Duterte’s Drug War
+                            </p>
+                        </a></li>
+                    <li><a href="#!">
+                            <!-- 3 -->
+                            <p>3</p>
+                            <p>Could China’s Child Pneumonia Outbreak Spread? All You Need to Know</p>
+                        </a></li>
+                    <li><a href="#!">
+                            <!-- 4 -->
+                            <p>4</p>
+                            <p>U.S. Virgin Islands Is in a State of Emergency Over Lead in Water. Here's What to Know
+                            </p>
+                        </a></li>
+                    <li><a href="#!">
+                            <!-- 5 -->
+                            <p>5</p>
+                            <p>Rosalynn Carter Hired a Wrongfully Convicted Murderer to Serve as White</p>
+                        </a></li>
+                    <li><a href="#!">
+                            <!-- 6 -->
+                            <p>6</p>
+                            <p>Weight Loss Drug Wegovy Can Also Reduce Risk of Heart Events</p>
+                        </a></li>
                 </ul>
-    
+
                 <ul class="Reactions_Tap_list2 Tap_list">
-                    <li><a href="#!">   <!-- 1 -->
-                        <p>1</p>
-                        <p>South Korean Farmers Threaten to Release 2 Million Dogs in Protest of Dog Meat Ban</p>
-                    </a></li>
-                    <li><a href="#!">   <!-- 2 -->
-                        <p>2</p>
-                        <p>As Freed Hostages Return to Israel, Details of Conditions in Captivity Emerge</p>
-                    </a></li>
-                    <li><a href="#!">   <!-- 3 -->
-                        <p>3</p>
-                        <p>Are Edibles Actually Good for Sleep?</p>
-                    </a></li>
-                    <li><a href="#!">   <!-- 4 -->
-                        <p>4</p>
-                        <p>Irish-Israeli Hostage Emily Hand, 9, Is Reunited With Her Father After Release</p>
-                    </a></li>
+                    <li><a href="#!">
+                            <!-- 1 -->
+                            <p>1</p>
+                            <p>South Korean Farmers Threaten to Release 2 Million Dogs in Protest of Dog Meat Ban</p>
+                        </a></li>
+                    <li><a href="#!">
+                            <!-- 2 -->
+                            <p>2</p>
+                            <p>As Freed Hostages Return to Israel, Details of Conditions in Captivity Emerge</p>
+                        </a></li>
+                    <li><a href="#!">
+                            <!-- 3 -->
+                            <p>3</p>
+                            <p>Are Edibles Actually Good for Sleep?</p>
+                        </a></li>
+                    <li><a href="#!">
+                            <!-- 4 -->
+                            <p>4</p>
+                            <p>Irish-Israeli Hostage Emily Hand, 9, Is Reunited With Her Father After Release</p>
+                        </a></li>
                 </ul>
             </div>
         </div>
@@ -436,5 +485,5 @@
         </div>
     </footer>
 </body>
-</html>
 
+</html>
