--- a/index.html
+++ b/index.html
@@ -34,20 +34,73 @@
 
 
     <header class="header">
-        <h1 class="title">TIME</h1>
+
 
         <nav class="navbar_burger">
             <i class="xi-bars"></i>
         </nav>
 
+
+
+        <div class="sub_ad">
+            <a href="#">
+                <img src="./public/images/sub_ad_img.png" alt="ad">
+            </a>
+        </div>
+
+        <nav class="gnb"></nav>
+
+
+        <h1 class="title"><a href="#">TIME</a></h1>
+
+
+        <nav class="navbar">
+
+            <section class="sns_box">
+                <a href="#"><img src="./public/images/sns_img01.png" alt="sns01"></a>
+                <a href="#"><img src="./public/images/sns_img02.png" alt="sns02"></a>
+                <a href="#"><img src="./public/images/sns_img03.png" alt="sns03"></a>
+                <a href="#"><img src="./public/images/sns_img04.png" alt="sns04"></a>
+                <a href="#"><img src="./public/images/sns_img05.png" alt="sns05"></a>
+                <a href="#"><img src="./public/images/sns_img06.png" alt="sns06"></a>
+            </section>
+
+            <section class="search_box">
+                <i class="xi-search"></i>
+                <p class="search_title">Search TIME</p>
+                <button class="search_btn">Go</button>
+            </section>
+
+        </nav>
+
+        <hr />
+        <nav class="lnb">
+            <ul>
+                <li><a href="#">NEWFEED</a></li>
+                <li><a href="#">U.S.</a></li>
+                <li><a href="#">POLITICS</a></li>
+                <li><a href="#">WORLD</a></li>
+                <li><a href="#">BUSINESS</a></li>
+                <li><a href="#">TECH</a></li>
+                <li><a href="#">HEALTH</a></li>
+                <li><a href="#">SCIENCE</a></li>
+                <li><a href="#">ENTERTAINMENT</a></li>
+                <li><a href="#">STYLE</a></li>
+                <li><a href="#">SPORTS</a></li>
+                <li><a href="#">OPINION</a></li>
+                <li><a href="#">PHOTOS</a></li>
+            </ul>
+        </nav>
+
+        <hr class="hr_solid" />
+
+
     </header>
 
 
-    <section class="search_box">
-        <i class="xi-search"></i>
-        <p class="search_title">Search TIME</p>
-        <button class="search_btn">Go</button>
-    </section>
+
+
+
 
 
 
