--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!-- css 연결 -->
     <link rel="stylesheet" href="./style.css">
 
+    <!-- JS 연결 -->
+    <script src="./index.js"></script>
+
 
     <title>TIME | Current & Breaking News | National & World Updates</title>
 
